Update through methods section. --Lindley

--- a/ScintillatorPaper/ScintillatorPaper.tex
+++ b/ScintillatorPaper/ScintillatorPaper.tex
@@ -111,22 +111,20 @@ In this work, we measure the light yields of simple scintillator cocktails made 
   \end{center}
 \end{table}
 
-\section{Experimental}
+\section{Experimental Methods}
 \label{exp_sec}
-The light yield of candidate liquid scintillators with varying amounts of PPO and different QDs was measured by collecting the charge produced by a gamma ray irradiated scintillator with a PMT. In addition, the emission and absorption spectrum of the QDs were measured with two different spectrophotometers. The details of the experimental setup are explained below followed by a description of the sample handling.
 
-\subsection{Light Yield Setup}
+The light yield of the candidate liquid scintillators was measured using the charge collected by a photomultiplier tube (PMT) when the samples were illuminated with a gamma source. Further measurements of the emission and absorption spectrum of the QD scintillator were performed. The details of the experimental methods including the sample handling are described in the following sections.
+
+\subsection{Light Yield Measurements}
 \label{ly_setup_sec}
 
-\subsubsection{Setup}
-The setup is illustrated in Figure \ref{setup_fig}. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) holds the scintillator mixtures. The cell is coupled to the PMT with transparent silicone optical grease (Saint Gobain BC-630) with a similar index of refraction to the cell and PMT glass so that light losses due to reflection are minimized. The quartz cell is then secured in a reflective white Teflon block to further increase the light collection efficiency. The scintillator is excited by a ${^{137}}$Cs source with an activity of $\approx$1~$\mu$Ci (=37~kBq). The source is attached to the outside of the Teflon block. Isotope ${^{137}}$Cs undergoes beta decay with the subsequent emission of a single 662 keV gamma. The emitted gamma rays enter the quartz cell, then typically Compton scatter with electrons, which excite the scintillator. Cherenkov light is also produced from electrons with energies above a given threshold as discussed in Section  \ref{qd_sec} . A fraction of the emitted optical photons hit the photocathode of a Hamamatsu R1828-01 PMT \cite{hamamatsupmt}. A Hamamatsu E2979-500 base \cite{hamamatsubase} is used, and the high voltage of -1675~V is provided by a LeCroy 1454 high voltage system. The charge incident on the photocathode produce pulses which are recorded by an AlazarTech ATS9870 PCI waveform digitizer \cite{alazartech}. 
+The setup for the light yield measurements is illustrated in Figure \ref{setup_fig}. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) holds the scintillator mixtures. The cell is coupled to the PMT with transparent silicone optical grease (Saint Gobain BC-630) with a similar index of refraction to the cell and PMT glass so that light losses due to reflection are minimized. The quartz cell is then secured in a reflective white Teflon block to further increase the light collection efficiency. The scintillator is excited by a ${^{137}}$Cs source with an activity of $\approx$1~$\mu$Ci (=37~kBq). The source is attached to the outside of the Teflon block. Isotope ${^{137}}$Cs undergoes beta decay with the subsequent emission of a single 662 keV gamma. The emitted gamma rays enter the quartz cell, then typically Compton scatter with electrons, which excite the scintillator. Cherenkov light is also produced from electrons with energies above a given threshold as discussed in Section  \ref{qd_sec} . A fraction of the emitted optical photons hit the photocathode of a Hamamatsu R1828-01 PMT \cite{hamamatsupmt}. A Hamamatsu E2979-500 base \cite{hamamatsubase} is used, and the high voltage of -1675~V is provided by a LeCroy 1454 high voltage system. The charge incident on the photocathode produce pulses which are recorded by an AlazarTech ATS9870 PCI waveform digitizer \cite{alazartech}. 
 
-\subsubsection{Photomultiplier Tube Calibration}
+%Was there supposed to be something here?
+%\subsubsection{Photomultiplier Tube Calibration}
 
-\subsubsection{Sample Handling and Procedure}
-In order to ensure reproducible and accurate measurements, a sample handling procedure is defined. In particular, contamination of the samples with dust, residual chemicals and oxygen is avoided.  
-
-The bottles that store the samples are rinsed with isopropanol, cyclohexane, dried and finally rinsed with the solvent. In addition, the bottles are sealed under N$_{2}$ to reduce the amount of oxygen in contact with the sample. Oxygen interferes with the light production processes (oxygen quenching \cite{birks64}) and leads to a loss of light output. The lids of the bottles are sealed with Teflon tape and electric tape to further limit the amount of oxygen entering the bottle. 
+In order to ensure reproducible and accurate measurements, a sample handling procedure is defined. In particular, contamination of the samples with dust, residual chemicals and oxygen is avoided. The bottles that store the samples are rinsed with isopropanol, cyclohexane, dried and finally rinsed with the solvent. In addition, the bottles are sealed under N$_{2}$ to reduce the amount of oxygen in contact with the sample. Oxygen interferes with the light production processes (oxygen quenching \cite{birks64}) and leads to a loss of light output. The lids of the bottles are sealed with Teflon tape and electric tape to further limit the amount of oxygen entering the bottle. 
 
 The quartz cell is also cleaned thoroughly when samples are changed. The optical grease on the outside is removed with ethanol and on the inside it is washed with isopropanol then dried with N$_{2}$ twice, washed with cyclohexane, and again dried with N$_{2}$. The amount of liquid scintillator sample in the cell is kept constant to avoid effects due to differences in light collection. Before each measurement, a pipet is inserted into the liquid to slowly purge the samples with nitrogen for about 10 minutes to actively remove remaining oxygen. 
 
@@ -140,11 +138,10 @@ The coupling of the cell to the PMT is done consistently, and the PMT is aligned
 \end{center}
 \end{figure}
 
-\subsection{Absorption and Emission Setup}
+\subsection{Absorption and Emission Spectrum Measurements}
 \subsubsection{Setup}
 A Perkin Elmer Lambda 25 UV/Vis is used for measuring the emission spectrum and a Shimadzu UV3101 for measuring absorption spectrum of the QD doped liquid scintillators. Both instruments utilize a double-beam setup. White light from deuterium UV lamp and a halogen lamp produce the beams. \cite{|}
 
-\subsubsection{Sample Handling and Procedure}
 To measure the absorption spectrum of each quantum-dot sample, the following procedure is executed. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) is rinsed with toluene to dissolve any residue on the wall. Next, the cell is soaked in hydrochloric acid for 5 minutes to clean the cell and destroy any remaining QD. To wash away the hydrochloric acid and the residue QD constituents, the quartz cell is rinsed with distilled water and is then subjected to three iterations of liquid isopropyl alcohol evaporated by nitrogen gas. Since all of the QD samples are dissolved in toluene, a background absorption spectrum analysis is required to isolate the quantum-dot spectrum.  A background scan is performed with a vial filled with pure toluene. The toluene is then replaced with the QD sample, and the absorption scan is performed.  % This is repeated for each QD candidate listed in \ref{quantum_dots_table}.
 
 The cleaning procedure for the emission spectrum measurements is the same as the procedure for the absorption trials. The emission spectrum is measured by a Perkin Elmer Lambda 25 UV/Vis and does not require a background toluene scan. 
